--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "pack/davidhalter/start/jedi-vim"]
 	path = pack/davidhalter/start/jedi-vim
 	url = https://github.com/davidhalter/jedi-vim.git
+[submodule "pack/psf/start/black"]
+	path = pack/psf/start/black
+	url = https://github.com/psf/black.git
